# trashy

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  release.yaml  superlinter.yml
crates/cli/: Cargo.toml  border.rs  exitcode.rs  input.rs  main.rs  opt.rs  print.rs  restore_index.rs  rustyline.rs  table.rs  utils.rs
crates/cli/opt/: subcommand.rs
crates/cli/opt/subcommand/: completion.rs  empty.rs  list.rs  put.rs  remove.rs  restore.rs
crates/cli/src/: lib.rs  main.rs  opt.rs  parser.rs  trash_info.rs
crates/cli/src/opt/: subcommand.rs
crates/cli/src/opt/subcommand/: list.rs
crates/lib/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/lib/fuzz/: Cargo.toml
crates/lib/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/lib/src/: lib.rs  parser.rs  percent_path.rs  trash_entry.rs  trash_entry_iter.rs  trash_info.rs  utils.rs
crates/lib/src/parser/: error.rs  mod.rs  parser.rs
crates/lib/tests/: integration.rs  macros.rs  utils.rs
crates/lib/tests/data/: test.txt
src/: app.rs  args.rs  exitcode.rs  filter.rs  lib.rs  main.rs  parser.rs  print.rs  range.rs  range_set.rs  range_syntax.rs  restore_index.rs  rustyline.rs  table.rs  trash.rs  trash_entry.rs  trash_info.rs  trash_info_entry.rs  trash_item.rs  utils.rs
src/app/: command.rs
src/app/command/: completions.rs  empty.rs  list.rs  manpage.rs  put.rs  restore.rs  utils.rs
src/args/: command.rs
src/args/command/: completions.rs  empty.rs  list.rs  put.rs  remove.rs  restore.rs
src/parser/: error.rs  mod.rs  parser.rs
