[package]
name = "trashy"
version = "1.0.3"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
description = """
trashy is a simple, fast, and featureful alternative to rm and trash-cli.
"""
documentation = "https://github.com/oberblastmeister/trashy"
homepage = "https://github.com/oberblastmeister/trashy"
repository = "https://github.com/oberblastmeister/trashy"
readme = "README.md"
keywords = ["trash", "remove", "recycle", "bin", "freedesktop"]
categories = ["command-line-utilities"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.62"

[[bin]]
path = "src/main.rs"
name = "trash"

[dependencies]
clap_mangen = "0.1.11"
clap_complete = "3.2.3"
anyhow = { version = "1.0.63", features = ["backtrace"] }
trash = "2.1.5"
chrono = "0.4.20"
chrono-humanize = "0.2.1"
lscolors = { version = "0.12.0", features = ["crossterm"] }
once_cell = "1.13.0"
atty = "0.2.14"
ansi_term = "0.12.1"
humantime = "2.1.0"
regex = "1.6.0"
aho-corasick = "0.7.18"
dialoguer = "0.10.2"
globset = { version = "0.4.9", default-features = false }
either = "1.7.0"
terminal_size = "0.2.1"

[dependencies.tabled]
version = "0.8.0"
default-features = false
features = ["color"]

[dependencies.clap]
version = "3.2.19"
features = ["suggestions", "color", "derive", "wrap_help", "cargo"]
