[package]
name = "trash"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
log = "0.4.11"
prettytable-rs = "0.8.0"
ansi_term = "0.12.1"
lscolors = "0.7.1"
eyre = "0.6.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
trash_lib = { path = "../lib" }
