[package]
name = "cli"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trash_lib = { path = "../lib" }
structopt = "0.3.17"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
log = "0.4.11"
lscolors = "0.7.1"
