[package]
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"
name = "trash_lib"
version = "0.1.0"

[dependencies]
chrono = "0.4.15"
directories = "3.0.1"
fs_extra = "1.2.0"
log = "0.4.11"
once_cell = "1.4.1"
percent-encoding = "2.1.0"
snafu = "0.6.8"

[dev-dependencies]
anyhow = "1.0.32"
tempfile = "3.1.0"
