[package]
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"
name = "trash_lib"
version = "0.1.0"
description = """
The library that interacts with the free-desktop trash. Used for trash-cli.
"""
license = "MIT/Apache-2.0"

[dependencies]
chrono = "0.4.15"
directories = "3.0.1"
fs_extra = "1.2.0"
log = "0.4.11"
once_cell = "1.4.1"
percent-encoding = "2.1.0"
rayon = { version = "1.5.0", optional = true }
snafu = "0.7.1"

[dev-dependencies]
eyre = "0.6.3"
tempfile = "3.1.0"
xshell = "0.1.6"
